remove wheel to section feature on firefox for fixing bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,11 @@ body {
 }
 
 @media only screen and (min-width: 1024px) {
+  html,
   body {
     -ms-overflow-style: none;
-    scrollbar-width: none;
-    touch-action: none;
   }
+
   body::-webkit-scrollbar {
     display: none;
   }
